@@ -10,7 +10,8 @@ version x.x.x (xx/xx/xxxx):
     support (alec)
   - lmsd: added command line option '-f' to run in foreground (without fork),
     fixed reload of instances with empty crontab on every minute, write last 
-    reload time to database if reload was ordered (alec/G.Stanislawski)
+    reload time to database if reload was ordered, fixed problem with
+    zombies (alec/G.Stanislawski)
     
 version 1.5.6 Baal (24/04/2005):
 
